--- a/composer.json
+++ b/composer.json
@@ -26,7 +26,9 @@
         "contao/manager-plugin": "<2.0 || >=3.0"
     },
     "require-dev": {
-        "contao/manager-plugin": "^2.0"
+        "contao/manager-plugin": "^2.1",
+        "squizlabs/php_codesniffer": "^3.2",
+        "phpmd/phpmd": "^2.8"
     },
     "autoload": {
         "psr-4": {
@@ -38,5 +40,17 @@
     },
     "replace":{
         "guave/contao-templatehint":"self.version"
+    },
+    "scripts": {
+        "test-static": [
+            "@phpcs",
+            "@phpmd"
+        ],
+        "phpmd": [
+            "php vendor/bin/phpmd src/ text phpmd.xml"
+        ],
+        "phpcs": [
+            "php vendor/bin/phpcs"
+        ]
     }
 }
