added check if kernel debug is active

--- a/src/Resources/config/services.yml
+++ b/src/Resources/config/services.yml
@@ -10,6 +10,7 @@ services:
     Gebi84\TemplatehintBundle\Helper\Helper:
         arguments:
             - '@session'
+            - '@kernel'
 
     templatehint_helper:
         alias: Gebi84\TemplatehintBundle\Helper\Helper
