added routing and some fixes

--- a/src/Resources/config/services.yml
+++ b/src/Resources/config/services.yml
@@ -4,16 +4,17 @@ services:
             - '@templatehint_helper'
         tags:
             -   name: data_collector
-                template: '@Templatehint/collector/templatehintDataCollector.html.twig'
+                template: '@Gebi84Templatehint/collector/templatehintDataCollector.html.twig'
                 id: 'templatehint_data_collector'
 
-    Gebi84\TemplatehintBundle\Helper\Helper:
+    Gebi84\TemplatehintBundle\Helper\Templatehint:
         arguments:
             - '@session'
             - '@kernel'
+            - '@request_stack'
 
     templatehint_helper:
-        alias: Gebi84\TemplatehintBundle\Helper\Helper
+        alias: Gebi84\TemplatehintBundle\Helper\Templatehint
         public: true
 
     Gebi84\TemplatehintBundle\EventListener\TemplatehintListener:
@@ -24,3 +25,8 @@ services:
             - { name: contao.hook, hook: parseBackendTemplate, method: parseBackendTemplateHint }
             - { name: contao.hook, hook: outputFrontendTemplate, method: addAssets }
             - { name: contao.hook, hook: outputBackendTemplate, method: addAssets }
+
+    Gebi84\TemplatehintBundle\Controller\Templatehint:
+        arguments:
+            - '@templatehint_helper'
+        public: true
